updated displayBoard function, fixed visibilty of clicked cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,30 @@
 * {
+    display: flex;
+    justify-content: center;
     background-color: rgb(253, 239, 171);
 }
 
 #board {
-    color: brown;
-    background-color: rgba(255, 254, 253, 0.221);
-    padding: 5px;
-}
-
-img {
-    height: 150px;
-    width: 150px;
+    justify-content: center;
+    height: 500px;
+    width: 500px;
+    align-items: center;
+    background-color: aliceblue;
 }
 
 tr {
-    border: 2px solid black;
-    background-color: blueviolet;
+    display: block;
+    justify-content: center;
+    background-color: #fff;
+    border-collapse: collapse;
+
+}
+
+td {
+    border: 1px solid rebeccapurple;
+}
+
+img {
+    height: 100px;
+    width: 100px;
 }
